Change MDI build type to SHARED

--- a/lib/mdi/Makefile.gcc
+++ b/lib/mdi/Makefile.gcc
@@ -18,8 +18,8 @@ EXTRAMAKE = Makefile.lammps.empty
 
 lib: 	$(OBJ)
 	mkdir build
-	cd build; cmake -Dlibtype=STATIC -Dlanguage=C -D CMAKE_C_COMPILER=gcc ..; make
-	cp build/MDI_Library/libmdi.a .
+	cd build; cmake -Dlibtype=SHARED -Dlanguage=C -D CMAKE_C_COMPILER=gcc ..; make
+	cp build/MDI_Library/libmdi.* .
 	cp MDI_Library/mdi.h .
 	@cp $(EXTRAMAKE) Makefile.lammps
 
