Revert "Change MDI build type to SHARED"
This reverts commit aa55b6f38682be1c173e487c144c19cc1625be34.

--- a/lib/mdi/Makefile.mpi
+++ b/lib/mdi/Makefile.mpi
@@ -18,8 +18,8 @@ EXTRAMAKE = Makefile.lammps.empty
 
 lib: 	$(OBJ)
 	mkdir build
-	cd build; cmake -Dlibtype=SHARED -Dlanguage=CXX -D CMAKE_C_COMPILER=mpicxx -D CMAKE_CXX_COMPILER=mpicxx ..; make
-	cp build/molssi_driver_interface/libmdi.* .
+	cd build; cmake -Dlibtype=STATIC -Dlanguage=CXX -D CMAKE_C_COMPILER=mpicxx -D CMAKE_CXX_COMPILER=mpicxx ..; make
+	cp build/molssi_driver_interface/libmdi.a .
 	cp molssi_driver_interface/mdi.h .
 	@cp $(EXTRAMAKE) Makefile.lammps
 
