--- a/lib/mdi/Makefile.g++
+++ b/lib/mdi/Makefile.g++
@@ -18,8 +18,8 @@ EXTRAMAKE = Makefile.lammps.empty
 
 lib: 	$(OBJ)
 	mkdir build
-	cd build; cmake -Dlibtype=SHARED -Dlanguage=C -D CMAKE_C_COMPILER=g++ -D CMAKE_C_COMPILER=g++ ..; make
-	cp build/MDI_Library/libmdi.* .
+	cd build; cmake -Dlibtype=STATIC -Dlanguage=C -D CMAKE_C_COMPILER=g++ -D CMAKE_C_COMPILER=g++ ..; make
+	cp build/MDI_Library/libmdi.a .
 	cp MDI_Library/mdi.h .
 	@cp $(EXTRAMAKE) Makefile.lammps
 
