Improve MDI Library build

--- a/lib/mdi/Makefile.gcc
+++ b/lib/mdi/Makefile.gcc
@@ -17,7 +17,7 @@ EXTRAMAKE = Makefile.lammps.empty
 # ------ MAKE PROCEDURE ------
 
 lib: 	$(OBJ)
-	mkdir build
+	mkdir -p build
 	cd build; cmake -Dlibtype=STATIC -Dlanguage=C -D CMAKE_C_COMPILER=gcc ..; make
 	cp build/MDI_Library/libmdi.a .
 	cp MDI_Library/mdi.h .
