--- a/lib/mdi/Makefile.mpi
+++ b/lib/mdi/Makefile.mpi
@@ -17,7 +17,7 @@ EXTRAMAKE = Makefile.lammps.empty
 # ------ MAKE PROCEDURE ------
 
 lib: 	$(OBJ)
-	mkdir build
+	mkdir -p build
 	cd build; cmake -Dlibtype=STATIC -Dlanguage=CXX -D CMAKE_C_COMPILER=mpicxx -D CMAKE_CXX_COMPILER=mpicxx ..; make
 	cp build/molssi_driver_interface/libmdi.a .
 	cp molssi_driver_interface/mdi.h .
