--- a/lib/mdi/Makefile.mpi
+++ b/lib/mdi/Makefile.mpi
@@ -18,9 +18,9 @@ EXTRAMAKE = Makefile.lammps.empty
 
 lib: 	$(OBJ)
 	mkdir -p build
-	cd build; cmake -Dlibtype=STATIC -Dlanguage=CXX -D CMAKE_C_COMPILER=mpicxx -D CMAKE_CXX_COMPILER=mpicxx ..; make
-	cp build/molssi_driver_interface/libmdi.a .
-	cp molssi_driver_interface/mdi.h .
+	cd build; cmake -Dlibtype=STATIC -Dlanguage=CXX -D CMAKE_C_COMPILER=mpicc -D CMAKE_CXX_COMPILER=mpicxx ..; make
+	cp build/MDI_Library/libmdi.a .
+	cp MDI_Library/mdi.h .
 	@cp $(EXTRAMAKE) Makefile.lammps
 
 # ------ CLEAN ------
