Squashed 'lib/mdi/' changes from a53d9929f..2d7015fac
2d7015fac Merge pull request #78 from MolSSI-MDI/cxx
02493ac33 Fix bug in CXX support
d7f676773 Rename LIB method to LINK
9ea211de6 Update badge links

git-subtree-dir: lib/mdi
git-subtree-split: 2d7015face9272a1c6032cb18acba7f2d2a5cc59

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,7 +29,7 @@ elseif( language STREQUAL "Python" )
    set(use_C "C")
    set(use_Python "Python")
 else()
-   message( FATAL_ERROR "Language not supported.  Supported languages: C, Fortran, Python" )
+   message( FATAL_ERROR "Language not supported.  Supported languages: C, CXX, Fortran, Python" )
 endif()
 
 project(mdi
